crates/reifydb-testing/tests/testscript/errors/string_special_within.error
parse error at line 1 column 7 for "\"com;mand\"":
com;mand
      ^